# Ludo_POO2

./: CMakeLists.txt  Dado.cpp  Dado.h  Ficha.cpp  Ficha.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Ludo.cpp  Ludo.h  README.md  Recorrido.cpp  Recorrido.h  Restricciones  Tablero.cpp  Tablero.h  config.h  main.cpp  readme.md
